# CamForge-Python

./: .gitignore  0000001.py  BUILD.en.md  BUILD.md  CHANGELOG.md  CamForge-v0.4.1.spec  CamForge.spec  LICENSE  README.en.md  README.ja.md  README.md  ROADMAP.en.md  ROADMAP.ja.md  ROADMAP.md  UI_Reference.py  build.bat  cam_mechanics.py  i18n.py  main.py  make_icon.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
tests/: test_cam_mechanics.py  test_i18n.py  test_ui.py
ui/: __init__.py  animation.py  config.py  constants.py  ctk_components.py  ctk_constants.py  ctk_sidebar.py  ctk_toolbar.py  drawing.py  dxf_export.py  export.py  i18n_manager.py  params.py  plots.py  shortcut.py  sidebar.py  theme.py
