[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camforge"
version = "0.6.10"
description = "Cam mechanism kinematics simulator with GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CamForge Team"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mechanical Engineering",
]
dependencies = [
    "numpy>=1.24,<3",
    "matplotlib>=3.7,<4",
    "scipy>=1.10,<2",
    "customtkinter>=5.2,<6",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1,<4"]
gif = ["Pillow>=10.0,<12"]
all = ["camforge[excel,gif]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.gui-scripts]
camforge = "main:main"

[tool.setuptools.packages.find]
include = ["cam_mechanics", "i18n", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
